styles.css
@keyframes pixel-banner-image--fade-in {
    from { opacity: 0; }
    to { opacity: 1; }
}

/* ------------------------------------------------------------------ */
/* -- configure default: move banner image to top, fade/size, etc. -- */
/* ------------------------------------------------------------------ */
.pixel-banner-image {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	background-size: cover; 
	background-position: 50% 50%;
	overflow: hidden;  
	mask-image: linear-gradient(to bottom, black calc(100% + var(--pixel-banner-fade, -75%)), transparent);
	-webkit-mask-image: linear-gradient(to bottom, black calc(100% + var(--pixel-banner-fade, -75%)), transparent);
	height: var(--pixel-banner-height, 350px);
    border-radius: var(--pixel-banner-radius, 17px) !important;
	pointer-events: none;
	animation: pixel-banner-image--fade-in 0.3s ease-in-out;
	will-change: opacity;
	transform: translateZ(0);
	background-repeat: no-repeat;
    z-index: 0;
}
/* fix for banner image overlapping with note content */
.pixel-banner-image ~ div {
    z-index: 1;
}
.cm-sizer,
.markdown-preview-sizer {
    display: flex;
    flex-direction: column;
}

/* fix overflow issue with embedded notes */
.internal-embed:not(.image-embed) {
    overflow: hidden;
}


/* ------------------------------------------------------------------ */
/* -- push frontmatter container down to give room to banner image -- */
/* ------------------------------------------------------------------ */
.pixel-banner .cm-sizer:first-of-type,
.pixel-banner .markdown-preview-sizer:first-of-type {
    padding-top: var(--pixel-banner-content-start, 150px);
}
/* fix for embedded notes */
.internal-embed > .markdown-embed-content .cm-sizer:first-of-type,
.internal-embed > .markdown-embed-content .markdown-preview-sizer:first-of-type {
    padding-top: unset !important;
}

/* -------------------------- */
/* -- Settings Page Styles -- */
/* -------------------------- */
.vertical-tab-content-container {
    display: flex;
    flex-direction: column;
}

.pixel-banner-settings {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    padding: 20px;
    max-width: 800px;
    margin: 50px auto 0 auto;
}

.pixel-banner-header {
    text-align: center;
    margin-bottom: 30px;
    background-color: var(--background-secondary);
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.pixel-banner-header h2 {
    margin-bottom: 10px;
    color: var(--text-accent);
}

.pixel-banner-main-content {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 30px;
    overflow: hidden;
}

.pixel-banner-settings-tabs {
	flex-direction: row;
	flex: 0 auto;
}

.pixel-banner-settings-tab-content-container {
	display: flex;
    flex-direction: column;
    flex: 1;
    overflow: hidden;
}

.pixel-banner-settings-tab-content-container > .tab-content {
    overflow: auto;
    padding-right: 10px;
}

.tab-content[data-tab="Folder Images"] {
    padding-bottom: 10px;
}
.tab-content[data-tab="Folder Images"] .add-folder-image-setting {
    position: absolute;
	bottom: 0;
	right: 64px;
    padding-right: 16px;
    background: var(--background-primary);
}
.tab-content[data-tab="Folder Images"] .add-folder-image-setting button {
    color: var(--text-accent);
    border: 1px solid var(--text-accent);
}

.pixel-banner-section {
    background-color: var(--background-secondary);
    border-radius: 10px;
    padding: 20px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.pixel-banner-section h3 {
    margin-top: 0;
    margin-bottom: 15px;
    color: var(--text-accent);
    font-size: 1.2em;
}

.pixel-banner-section ol {
    padding-left: 20px;
    margin-bottom: 15px;
}

.pixel-banner-section pre {
    background-color: var(--background-primary);
    border-radius: 5px;
    padding: 10px;
    margin-top: 10px;
    overflow-x: auto;
}

.pixel-banner-footer {
    margin-top: 30px;
    text-align: center;
    font-style: italic;
    color: var(--text-muted);
}

.pixel-banner-settings .setting-item {
    border-top: none;
    padding-top: 10px;
    padding-bottom: 10px;
}
.pixel-banner-settings .setting-item.full-width-control,
.pixel-banner-settings .setting-item.full-width-control > .setting-item-control {
    width: 100%;
}
.pixel-banner-settings .setting-item-control {
    justify-content: flex-end;
}

.setting-item.folder-image-setting {
    position: relative;
	flex-wrap: wrap;
	justify-content: flex-start;
    border: 1px solid var(--slider-track-background);
    border-radius: 5px;
    padding: 20px;
    margin: 20px 0;
}
.setting-item.folder-image-setting .folder-image-delete-container {
    position: absolute;
    top: 10px;
    right: 0;
}

.setting-item.folder-image-setting > .folder-input-container,
.setting-item.folder-image-setting > .display-and-repeat-container {
	display: flex;
	width: 100%;
}
.setting-item.folder-image-setting > .setting-item-control {
	justify-content: flex-start;
}
/* setting item for api key */
.pixel-banner-settings .setting-item[data-id="apiKey"] .setting-item-control {
    width: 100%;
}
/* setting item for default keywords */
.pixel-banner-settings .setting-item[data-id="defaultKeywords"] .setting-item-control {
    width: 100%;
}


.pixel-banner-settings input[type="text"],
.pixel-banner-settings select {
    background-color: var(--background-primary);
    border: 1px solid var(--background-modifier-border);
    border-radius: 5px;
    padding: 5px 30px 5px 10px;
}

.pixel-banner-settings .dropdown {
    background-color: var(--background-primary);
    border: 1px solid var(--background-modifier-border);
    border-radius: 5px;
}

.pixel-banner-settings .slider-container {
    display: flex;
    align-items: center;
}

.pixel-banner-settings.slider-value {
    min-width: 30px;
    text-align: right;
}

.pixel-banner-settings .setting-item-description {
    color: var(--text-muted);
}

.pixel-banner-settings-tabs {
    display: flex;
}

.pixel-banner-settings-tab {
    margin-right: 10px;
    padding: 10px 20px;
    border: none;
    background: none;
    cursor: pointer;
    font-size: 16px;
    color: var(--text-muted);
    transition: color 0.3s ease;
}

.pixel-banner-settings-tab:hover {
    color: var(--text-normal);
}

.pixel-banner-settings-tab.active {
    color: var(--text-accent);
    border-bottom: 2px solid var(--text-accent);
}

.pixel-banner-settings-tab-content-container > .tab-content {
    display: none;
}

.pixel-banner-settings-tab-content-container > .tab-content.active {
    display: block;
}
.pixel-banner-settings-tabs .folder-image-setting .slider-container {
    display: flex;
    align-items: center;
}

.pixel-banner-settings-tabs .folder-image-setting .slider-value {
    min-width: 30px;
    text-align: right;
}

.folder-images-container .setting-item-name__label {
    display: flex;
    align-items: center;
}

.folder-images-container .full-width-control {
    width: 100%;
}

.setting-item.folder-image-setting > div { min-height: 50px; }

